--- a/MVCLayer/Views/Home/Decor.cshtml
+++ b/MVCLayer/Views/Home/Decor.cshtml
@@ -2,5 +2,309 @@
     ViewData["Title"] = "Decor";
 }
 
-<h1>Decor</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>UPG | Decor</title>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+          integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+          crossorigin="anonymous"
+          referrerpolicy="no-referrer" />
+    <link rel="shortcut icon"
+          href="images/site_tab_img.jpg"
+          type="image/jpeg" />
+
+    <link rel="stylesheet" href="~/css/shared.css" />
+    <link rel="stylesheet" href="~/css/laptop.css" />
+    <link rel="stylesheet" href="~/css/main.css">
+</head>
+<body>
+
+
+    <!-- Site Main header end -->
+    <main>
+        <div class="container main-container">
+            <div class="filtr">
+                <h2>Фильтр</h2>
+                <span>
+
+                    <div class="brends">
+                        <p class="filter-title">Бренды</p>
+                        <span class="checkbox">
+                            <input class="checkbox" type="checkbox" id="checkbox1" />
+                            <label for="checkbox1">Corsair</label>
+                        </span>
+                        <span class="checkbox">
+                            <input class="checkbox" type="checkbox" id="checkbox2" />
+                            <label for="checkbox2">Govee</label>
+                        </span>
+                        <span class="checkbox">
+                            <input class="checkbox" type="checkbox" id="checkbox3" />
+                            <label for="checkbox3">LaMetric</label>
+                        </span>
+                        <span class="checkbox">
+                            <input class="checkbox" type="checkbox" id="checkbox4" />
+                            <label for="checkbox4">UPGrade</label>
+                        </span>
+
+                    </div>
+                    <div class="price">
+
+                        <input type="range"
+                               id="rangeInput"
+                               min="5000000"
+                               max="50000000"
+                               value="5 000 000" />
+                        <span class="price-in-number">
+                            <p>5 000 000</p>
+                            <p id="rangeLabel">50 000 000</p>
+                        </span>
+                    </div>
+                    <div class="rtx-amd">
+                        <p>OpenGL</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+
+                        </select>
+                    </div>
+                    <div class="rtx-amd">
+                        <p>Скорость памяти</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+
+                        </select>
+                    </div>
+                    <div class="rtx-amd">
+                        <p>Видеопамять</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+
+                        </select>
+                    </div>
+                    <div class="rtx-amd">
+                        <p>Видеокарта</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+
+                        </select>
+                    </div>
+                    <div class="rtx-amd">
+                        <p>Интерфейс</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+
+                        </select>
+                    </div>
+                    <div class="rtx-amd">
+                        <p>CUDA Core</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+
+                        </select>
+                    </div>
+                    <div class="rtx-amd">
+                        <p>Интерфейс памяти</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+
+                        </select>
+                    </div>
+                    
+                    <div class="buttons-of-filter">
+                        <button class="reset">Сбросить фильтр</button>
+                        <button class="except">Применить фильтр</button>
+                    </div>
+
+                </span>
+            </div>
+            <div class="main-side">
+                <div class="main-side-intro">
+                    <p><a asp-controller="Home">Главная</a> / Декор</p>
+                    <span>
+                        <img width="70" src="~/images/Category_images/Decors.png" alt="">
+                        <h1>Декор</h1>
+                    </span>
+                    <div class="sort">
+                        <label for="">Сортировка</label>
+                        <select name="" id="">
+                            <option value="Поумолчанию">Поумолчанию</option>
+                            <option value="">Наименование (А -> Я)</option>
+                            <option value="">Наименование (Я -> А)</option>
+                            <option value="">Цена (по возрастанию)</option>
+                            <option value="">Цена (по убыванию)</option>
+                            <option value="">Рейтинг (по убыванию)</option>
+                            <option value="">Рейтинг (по возрастанию)</option>
+                        </select>
+
+                    </div>
+                </div>
+                <div class="laptops">
+                    <div class="diskount-items">
+
+                        <a class="discount-item" href="../item.html">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="../item.html">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="../item.html">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script src="~/js/app.js"></script>
+</body>
+</html>
+
 
