Monitor model polni pitdi 😥

--- a/UPG.Admin/Layout/YesNo.razor
+++ b/UPG.Admin/Layout/YesNo.razor
@@ -1,21 +1,15 @@
-﻿<MudDialog>
+﻿<MudDialog Class="YesNo" style="width: 400px; height: 170px">
     <DialogContent>
-        <MudText>@ContentText</MudText>
+        Are you sure!
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
-        <MudButton Color="@Color" Variant="Variant.Filled" OnClick="Submit">@ButtonText</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Submit">Ok</MudButton>
     </DialogActions>
 </MudDialog>
 
 @code {
     [CascadingParameter] MudDialogInstance MudDialog { get; set; }
-
-    [Parameter] public string ContentText { get; set; }
-
-    [Parameter] public string ButtonText { get; set; }
-
-    [Parameter] public Color Color { get; set; }
 
     void Submit() => MudDialog.Close(DialogResult.Ok(true));
     void Cancel() => MudDialog.Cancel();
