--- a/UPG.Admin/Layout/NavMenu.razor
+++ b/UPG.Admin/Layout/NavMenu.razor
@@ -59,6 +59,14 @@
                 </div>
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="headphones">
+                <div class="f-link d-flex justify-content-start" style="align-items: center">
+                    <span class="icon"><i class="bi bi-drives"></i></span>
+                    <span>Headphones</span>
+                </div>
+            </NavLink>
+        </div>
     </nav>
 </div>
 
