--- a/UPG.Admin/_Imports.razor
+++ b/UPG.Admin/_Imports.razor
@@ -10,10 +10,11 @@
 @using UPG.Admin.Layout
 @using MudBlazor
 @using UPG.Admin.Models.MonitorDTOs
-@using UPG.Admin.Models.ArmchairsDTOs;
-@using UPG.Admin.Models.CoolerDTOs;
-@using UPG.Admin.Models.DrivesDTOs;
-@using UPG.Admin.Models.GamingBuildsDTOs;
+@using UPG.Admin.Models.ArmchairsDTOs
+@using UPG.Admin.Models.CoolerDTOs
+@using UPG.Admin.Models.DrivesDTOs
+@using UPG.Admin.Models.GamingBuildsDTOs
+@using UPG.Admin.Models.HeadphonesDTOs
 @using UPG.Admin.Common
 @using System.Text
 @using System.Text.Json
