bazi xatolar to'g'rlandi

--- a/UPG.Admin/Pages/ArmchairsPages/Add.razor
+++ b/UPG.Admin/Pages/ArmchairsPages/Add.razor
@@ -17,6 +17,8 @@
                         <MudTextField @bind-Value="armchair.Armrests" Label="Armsets" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
                         <MudTextField @bind-Value="armchair.Cross_material" Label="Cross_material" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
                         <MudTextField @bind-Value="armchair.Reclining" Label="Reclining" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                    </MudItem>
+                    <MudItem xs="6">   
                         <MudTextField @bind-Value="armchair.Rocking_mechanism" Label="Rocking_mechanism" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
                         <MudTextField @bind-Value="armchair.Permissible_load" Label="Permissible_load" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
                         <MudTextField @bind-Value="armchair.Frame_material" Label="Frame_material" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
