--- a/UPG.Admin/Pages/DrivesPages/Edit.razor
+++ b/UPG.Admin/Pages/DrivesPages/Edit.razor
@@ -1,4 +1,4 @@
-﻿@page "/GamingBuilds/edit/{Id:int}"
+﻿@page "/Drives/edit/{Id:int}"
 
 <MudGrid>
     <MudItem xs="2"></MudItem>
@@ -8,21 +8,16 @@
             <MudCardContent>
                 <MudGrid>
                     <MudItem xs="6">
-                        <MudTextField @bind-Value="gamingBuilds.Name" Label="Name" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="gamingBuilds.BrandName" Label="Brand name" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="gamingBuilds.Price" Label="Price" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="gamingBuilds.MotherBoard" Label="MotherBoard" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="gamingBuilds.CPU" Label="CPU" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="gamingBuilds.GPU" Label="GPU" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="gamingBuilds.RAM" Label="RAM" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="gamingBuilds.SSD" Label="SSD" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="drives.Name" Label="Name" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="drives.BrandName" Label="Brand name" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="drives.Price" Label="Price" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="drives.Interface" Label="Interface" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="drives.Reading_speed" Label="Reading_speed" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="drives.Write_type" Label="Write type" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="drives.Drive_type" Label="Drive type" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                        <MudTextField @bind-Value="drives.Volume" Label="Volume" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
                     </MudItem>
                     <MudItem xs="6">
-                        <MudTextField @bind-Value="gamingBuilds.HDD" Label="HDD" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="gamingBuilds.PSU" Label="PSU" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="gamingBuilds.Cooler" Label="Cooler" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-                        <MudTextField @bind-Value="gamingBuilds.Case" Label="Case" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
-
                         <InputFile OnChange="@LoadFile" class="form-control" multiple />
                         @if (errors.Count > 0)
                         {
@@ -37,7 +32,7 @@
                         }
                     </MudItem>
                 </MudGrid>
-                <MudTextField @bind-Value="gamingBuilds.Description" Lines="5" Label="Description" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
+                <MudTextField @bind-Value="drives.Description" Lines="5" Label="Description" Variant="Variant.Outlined" Margin="Margin.Dense" Class="mt-4"></MudTextField>
             </MudCardContent>
             <MudCardActions Class="d-flex justify-center">
                 <MudButton @onclick="Cancel" Variant="Variant.Filled">Cancel</MudButton>
@@ -56,50 +51,46 @@
     @inject NavigationManager navigation
     @inject HttpClient httpClient
     @inject ISnackbar Snackbar
-    AddGamingBuildsDTO gamingBuilds = new();
+    AddDrivesDTO drives = new();
     private int maxAllowedFiles = 5;
     private long maxFileSize = 1024 * 5 * 1024;
     private List<string> errors = new List<string>();
     protected override async Task OnInitializedAsync()
     {
-        var response = await httpClient.GetAsync($"{Helper.URL}GamingBuilds/{Id}");
+        var response = await httpClient.GetAsync($"{Helper.URL}Drives/{Id}");
         if (response.IsSuccessStatusCode)
         {
-            gamingBuilds = await response.Content.ReadFromJsonAsync<AddGamingBuildsDTO>();
+            drives = await response.Content.ReadFromJsonAsync<AddDrivesDTO>();
         }
     }
 
     private void Cancel()
     {
-        navigation.NavigateTo("/GamingBuilds");
+        navigation.NavigateTo("/Drives");
     }
 
     private async Task Save()
     {
-        UpdateGamingBuildsDTO update = new()
+        UpdateDrivesDTO update = new()
         {
             ID = Id,
-            Name = gamingBuilds.Name,
-            BrandName = gamingBuilds.BrandName,
-            Price = gamingBuilds.Price,
-            Description = gamingBuilds.Description,
-            MotherBoard = gamingBuilds.MotherBoard,
-            CPU = gamingBuilds.CPU,
-            Cooler = gamingBuilds.Cooler,
-            RAM = gamingBuilds.RAM,
-            SSD = gamingBuilds.SSD,
-            HDD = gamingBuilds.HDD,
-            GPU = gamingBuilds.GPU,
-            PSU = gamingBuilds.PSU,
-            Case = gamingBuilds.Case
+            Name = drives.Name,
+            BrandName = drives.BrandName,
+            Description = drives.Description,
+            Interface = drives.Interface,
+            Reading_speed = drives.Reading_speed,
+            Write_type = drives.Write_type,
+            Drive_type  = drives.Drive_type,
+            Volume = drives.Volume
         };
-        var jsonContent = new StringContent(JsonConvert.SerializeObject(update), Encoding.UTF8, "application/json");
-        var response = await httpClient.PutAsync($"{Helper.URL}GamingBuilds", jsonContent);
+
+        var jsonContent = new StringContent(JsonConvert.SerializeObject(drives), Encoding.UTF8, "application/json");
+        var response = await httpClient.PutAsync($"{Helper.URL}Drives", jsonContent);
 
         if (response.IsSuccessStatusCode)
         {
             Snackbar.Add("Gaming build updated successfully!", Severity.Success);
-            navigation.NavigateTo("/GamingBuilds");
+            navigation.NavigateTo("/Drives");
         }
         else
         {
