--- a/UPG.Admin/Pages/CoolerPages/Cooler.razor
+++ b/UPG.Admin/Pages/CoolerPages/Cooler.razor
@@ -17,8 +17,8 @@
     </HeaderContent>
     <RowTemplate>
         <MudTd DataLabel="id">@context.ID</MudTd>
-        <MudTd DataLabel="Brand name">@context.BrandName</MudTd>
         <MudTd DataLabel="Name">@context.Name</MudTd>
+        <MudTd DataLabel="Brand name">@context.BrandName</MudTd>
         <MudTd DataLabel="Price">@context.Price</MudTd>
         <MudTd DataLabel="Action" style="display: flex; justify-content:center; gap: 10px">
             <MudIconButton @onclick="() => OpenEditPage(context.ID)" Icon="@Icons.Material.Filled.Edit" Variant="Variant.Filled" Color="Color.Primary" Size="Size.Medium" />
@@ -56,14 +56,9 @@
 
     private async void Delete(int id)
     {
-        var parameters = new DialogParameters<YesNo>();
-        parameters.Add(x => x.ContentText, "Are you sure delete this?");
-        parameters.Add(x => x.ButtonText, "Yes");
-        parameters.Add(x => x.Color, Color.Error);
+        var options = new DialogOptions { ClassBackground = "body" };
+        var dialogResult = await DialogService.Show<YesNo>("Delete", options).Result;
 
-        var options = new DialogOptions() { CloseButton = true, MaxWidth = MaxWidth.ExtraSmall };
-
-        var dialogResult = await DialogService.Show<YesNo>("Delete", parameters, options).Result!;
         if (!dialogResult.Cancelled)
         {
             var response = await httpClient.DeleteAsync(Helper.URL + "Cooler/" + id);
